[gd_scene load_steps=12 format=3 uid="uid://cimnvwui5b4y4"]

[ext_resource type="Script" path="res://Enemies/eye.gd" id="1_3ujmd"]
[ext_resource type="Texture2D" uid="uid://c8afq32g7obxf" path="res://assets/Super Grotto Escape Files/Characters/Enemies/sprites/fly-eye/fly-eye1.png" id="1_r7b2t"]
[ext_resource type="Texture2D" uid="uid://c54f6bcorhbwa" path="res://assets/Super Grotto Escape Files/Characters/Enemies/sprites/fly-eye/fly-eye2.png" id="2_8sb04"]
[ext_resource type="Texture2D" uid="uid://bc06okuy7mtae" path="res://assets/Super Grotto Escape Files/Characters/Enemies/sprites/fly-eye/fly-eye3.png" id="3_62abs"]
[ext_resource type="Texture2D" uid="uid://ce82ngnrblgps" path="res://assets/Super Grotto Escape Files/Characters/Enemies/sprites/fly-eye/fly-eye4.png" id="4_0kbg7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_kqtol"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_r7b2t")
}, {
"duration": 1.0,
"texture": ExtResource("2_8sb04")
}, {
"duration": 1.0,
"texture": ExtResource("3_62abs")
}, {
"duration": 1.0,
"texture": ExtResource("4_0kbg7")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qhev8"]

[sub_resource type="Animation" id="Animation_4kp1r"]
resource_name = "new_animation"
length = 16.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 8, 16),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -160), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ujbvr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mud1m"]
_data = {
"RESET": SubResource("Animation_ujbvr"),
"new_animation": SubResource("Animation_4kp1r")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_dtigg"]
radius = 81.3744

[node name="Eye" type="Node2D"]
script = ExtResource("1_3ujmd")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kqtol")
autoplay = "default"
frame_progress = 0.708798

[node name="Area2D" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_qhev8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_mud1m")
}
autoplay = "new_animation"
speed_scale = 4.0

[node name="Marker2D" type="Marker2D" parent="Sprite"]

[node name="Vision" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Vision"]
shape = SubResource("CircleShape2D_dtigg")

[connection signal="body_entered" from="Sprite/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Sprite/Vision" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="Sprite/Vision" to="." method="_on_vision_body_exited"]
